--- a/FootballNeighborhood.Frontend/src/styles.scss
+++ b/FootballNeighborhood.Frontend/src/styles.scss
@@ -1,4 +1,33 @@
-/* You can add global styles to this file, and also import other style files */
+html,
+body {
+    height: 100%;
+    margin: 0;
+    font-family: Abel, "Helvetica Neue", sans-serif;
+    font-size: 14px;
+}
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+::-webkit-scrollbar {
+    width: 5px;
+}
+
+::-webkit-scrollbar-track {
+    background: #f1f1f1;
+    border-radius: 4px;
+}
+
+::-webkit-scrollbar-thumb {
+    background: #41C8ED;
+    border-radius: 4px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background: #3f51b5;
+}
+
+body{
+  background-color: #17202A ;
+}
+
+.color-orange{
+  color: #a8602a;
+}
