--- a/FootballNeighborhood.Frontend/src/app/login/login.component.html
+++ b/FootballNeighborhood.Frontend/src/app/login/login.component.html
@@ -1,3 +1,46 @@
+
+
+<div class="d-flex flex-column p-5">
+  <div class="text-center">
+    <img src="./assets/images/logo.svg" class="logo-image mt-2" alt="logo" draggable="false">
+  </div>
+  <h2 class="color-orange text-center font-weight-bold">Witaj ponownie ! <span class="wave">👋</span></h2>
+  <form class="d-flex flex-column justify-content-center align-items-center" [formGroup]="loginForm" (ngSubmit)="logIn()" #formDirective="ngForm" >
+    <mat-form-field floatLabel="always" class="my-2 w-25">
+      <input #usernameInput="matInput" matInput
+          placeholder="{{ 'Username' | translate }}" formControlName="username" required autofocus>
+      <mat-error>
+          {{ 'UsernameIsRequired' | translate }}
+      </mat-error>
+      <mat-icon matSuffix [color]="usernameInput.errorState ? 'warn' : ''">person
+      </mat-icon>
+    </mat-form-field>
+    <mat-form-field floatLabel="always" class="mt-2 w-25">
+      <input #usernameInput="matInput" matInput type="password"
+          placeholder="{{ 'Password' | translate }}" formControlName="password" required autofocus>
+      <mat-error>
+          {{ 'PasswordIsRequired' | translate }}
+      </mat-error>
+      <span class="w-25 mb-2 color-orange forgot-password-span" (click)="resetPassword()">
+        Nie pamiętasz hasła ?
+      </span>
+      <mat-icon matSuffix
+          [color]="usernameInput.errorState ? 'warn' : ''">person</mat-icon>
+    </mat-form-field>
+    <strong class="w-25 mb-2 color-orange text-center font-weight-bold forgot" (click)="resetPassword()">
+      Nie pamiętasz hasła ?
+    </strong>
+    <button class="w-25 my-2" type="submit" mat-stroked-button color="accent" [disabled]="dataLoading || !loginForm.valid">
+      <mat-icon mat-icon class="material-symbols-outlined">lock</mat-icon>{{ 'Login' | translate }}
+    </button>
+
+    <button class="w-25 my-2 " color="primary"  mat-stroked-button [disabled]="dataLoading">
+        <mat-icon class="material-symbols-outlined">assignment_ind</mat-icon>{{ 'Register' | translate }}
+    </button>
+
+  </form>
+</div>
+<!--
 <div fxFill fxLayout="column">
     <div fxLayout="row" fxFlex>
         <div fxFill fxFlex="30" fxLayoutAlign="center">
@@ -81,4 +124,4 @@
         </div>
     </div>
 </div>
-<mat-progress-bar *ngIf="dataLoading" class="progress-bar" mode="indeterminate"></mat-progress-bar>
+<mat-progress-bar *ngIf="dataLoading" class="progress-bar" mode="indeterminate"></mat-progress-bar> -->
