--- a/FootballNeighborhood.Frontend/src/app/login/login.component.scss
+++ b/FootballNeighborhood.Frontend/src/app/login/login.component.scss
@@ -5,9 +5,10 @@
 }
 
 .forgot-password-span:hover {
-    color: #7b1fa2 !important;
+    color: #25563e !important;
     cursor: pointer !important;
-    font-weight: 500;
+    font-weight: 600;
+
 }
 
 input::-ms-reveal,
