Dodanie podstawowego widoku aplikacji oraz rozpoczecnie pracy nad spotkaniami

--- a/FootballNeighborhood.Frontend/src/app/app.component.html
+++ b/FootballNeighborhood.Frontend/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="checkUrlContainsRouteOutOfLayout();else loggedin">
+<div *ngIf="checkUrlContainsRouteOutOfLayout();else loggedin" class="base-background">
   <app-sidebar></app-sidebar>
 </div>
 
