--- a/FootballNeighborhood.Frontend/src/app/sidebar/sidebar.component.html
+++ b/FootballNeighborhood.Frontend/src/app/sidebar/sidebar.component.html
@@ -1,57 +1,38 @@
 <mat-sidenav-container fullscreen>
-    <mat-sidenav class="background-color-light-gray border-0 sidenav-style" mode="side" #sidenav opened
-        position="start">
-        <img src="./assets/images/logo.svg" class="logo-image ml-2 mt-2 logo-image-custom" alt="CaseFlowLogo">
-        <mat-nav-list class="mx-1">
-            <span class="ml-1 color-gray font-size-14 user-select-none">General</span>
-            <mat-list-item *ngFor="let link of generalLinks" [routerLink]="link.path" class="my-1"
-                [routerLinkActive]="['color-router-link-active']" #rla="routerLinkActive">
-                <mat-icon [ngClass]="rla.isActive ? 'material-symbols-round' : 'material-symbols-outlined'">
-                    {{link.icon}}</mat-icon>
-                <span [ngClass]="rla.isActive ? 'font-weight-bold user-select-none': 'user-select-none'">
-                    &nbsp;link.label</span>
-            </mat-list-item>
-        </mat-nav-list>
-        <mat-nav-list class="mx-1 other-margin-top">
-            <hr>
-            <span class="ml-1 color-gray font-size-14 user-select-none">Other</span>
-            <mat-list-item *ngFor="let link of otherLinks" [routerLink]="link.path" class="my-1"
-                [routerLinkActive]="['color-router-link-active']" #rla="routerLinkActive">
-                <mat-icon [ngClass]="rla.isActive ? 'material-symbols-round' : 'material-symbols-outlined'">
-                    {{link.icon}}</mat-icon>
-                <span [ngClass]="rla.isActive ? 'font-weight-bold user-select-none': 'user-select-none'">
-                    &nbsp;{{link.label }}</span>
-            </mat-list-item>
-        </mat-nav-list>
-        <mat-nav-list class="pt-0 mx-1">
-            <mat-list-item (click)="userPreferences.open()">
-                <mat-label class="d-flex w-100 align-items-center"><img src="./assets/images/default_profile_image.svg"
-                        class="profile-image-xsmall" alt="ProfileImage" draggable="false"><span class="ml-05">
-                          <!-- {{loggedInEmployeeDisplayName }} -->
-                        </span></mat-label>
-                <mat-select #userPreferences>
-                    <!-- <mat-option (click)="displayEmployeeWritePage()">
-                        <mat-icon class="material-symbols-outlined">person</mat-icon>
-                        <span class="user-select-none">&nbsp;{{'EditProfile' | translate}}</span>
-                    </mat-option> -->
-                    <!-- <mat-option (click)="switchLanguage()">
-                        <mat-icon class="material-symbols-outlined">translate</mat-icon>
-                        <span class="user-select-none">&nbsp;{{translateService.currentLang | translate}}</span>
-                    </mat-option> -->
-                    <!-- <mat-option (click)="logOut()">
-                        <mat-icon class="material-symbols-outlined">logout</mat-icon>
-                        <span class="user-select-none">&nbsp;{{'LogOut' | translate}}</span>
-                    </mat-option> -->
-                </mat-select>
-            </mat-list-item>
-        </mat-nav-list>
-        <p class="ml-1 copyright-style"><small class="color-gray user-select-none">Copyright © CaseFlow 2023</small>
-        </p>
+      <mat-sidenav class="sidenav-style base-background text-center" mode="side" #sidenav opened position="start">
+          <div>
+            <img src="./assets/images/logo-icon.svg" class="mt-3 mb-2 logo" alt="Mecze piłkarskie logo">
+          </div>
+          <mat-nav-list class="font-weight-bold">
+              <h1 class="color-green-light">Główne</h1>
+              <mat-list-item *ngFor="let link of generalLinks" [routerLink]="link.path"
+                  [routerLinkActive]="['color-green-light']" #rla="routerLinkActive">
+                  <div class="d-flex justify-content-center">
+                    <mat-icon [ngClass]="rla.isActive ? 'color-green-light': 'color-purple'">{{link.icon}}</mat-icon>
+                    <span [ngClass]="rla.isActive ? 'color-green-light': 'color-purple'"> &nbsp; {{link.label}}</span>
+                  </div>
+              </mat-list-item>
+          </mat-nav-list>
+          <hr>
+          <mat-nav-list>
+              <h1 class="color-green-light">Inne</h1>
+              <mat-list-item *ngFor="let link of otherLinks" [routerLink]="link.path"
+                  [routerLinkActive]="['color-green-light']" #rla="routerLinkActive">
+                  <div class="d-flex justify-content-center">
+                    <mat-icon [ngClass]="rla.isActive ? 'color-green-light': 'color-purple'"> {{link.icon}}</mat-icon>
+                    <span [ngClass]="rla.isActive ? 'color-green-light': 'color-purple'">
+                        &nbsp;{{link.label }}</span>
+                  </div>
+              </mat-list-item>
+          </mat-nav-list>
+          <div class="footer">
+            <div class="text-center">
+              <p><small class="color-green-light">&copy; Dominik Atrasik - Praca inżynieryjska</small></p>
+            </div>
+          </div>
     </mat-sidenav>
-    <mat-sidenav-content class="background-color-light-gray">
-        <div class="background-color-white container-size">
+    <mat-sidenav-content class="base-background">
             <router-outlet></router-outlet>
-        </div>
-        <!-- <mat-progress-bar *ngIf="dataLoading" class="progress-bar" mode="indeterminate"></mat-progress-bar> -->
+    <mat-progress-bar *ngIf="dataLoading" class="progress-bar" mode="indeterminate"></mat-progress-bar>
     </mat-sidenav-content>
 </mat-sidenav-container>
