--- a/FootballNeighborhood.Frontend/src/app/common/custom-notification/custom-notification.component.html
+++ b/FootballNeighborhood.Frontend/src/app/common/custom-notification/custom-notification.component.html
@@ -1,9 +1,11 @@
 <div class="d-flex flex-row align-items-center w-100">
     <div class="d-flex">
-    <span matSnackBarLabel>
-        <span class="d-flex align-items-center"><mat-icon
-                class="material-symbols-outlined notification-icon {{data.icon}}-notification-icon">{{data.icon}}</mat-icon>{{data.message}}</span>
-    </span>
+      <span matSnackBarLabel>
+          <span class="d-flex align-items-center"><mat-icon
+                class="mx-2 material-symbols-outlined notification-icon {{data.icon}}-notification-icon">{{data.icon}}</mat-icon>
+                  {{data.message}}
+          </span>
+      </span>
     </div>
     <div class="d-flex ml-auto">
     <span matSnackBarActions>
