--- a/FootballNeighborhood.Frontend/src/app/matches/matches.component.html
+++ b/FootballNeighborhood.Frontend/src/app/matches/matches.component.html
@@ -1,5 +1,58 @@
 <div class="w-100 d-flex flex-column">
-  <div>
+  <div class="mt-5 p-5">
+    <div class="d-flex justify-content-between">
+      <h3 class="color-green-light">Nadchodzące mecze na które jesteś zapisany</h3>
+      <button (click)="addNewMatch()" mat-raised-button color="accent">Dodaj spotkanie  <mat-icon >add</mat-icon></button>
+    </div>
+    <hr>
+    <table mat-table [dataSource]="matches" class="mat-elevation-z8" *ngIf="matches && matches.length > 0; else noData;">
+      <ng-container matColumnDef="name">
+        <th mat-header-cell *matHeaderCellDef> Nazwa </th>
+        <td mat-cell *matCellDef="let match"> {{match.name}} </td>
+      </ng-container>
+
+      <ng-container matColumnDef="ownerDisplayName">
+        <th mat-header-cell *matHeaderCellDef> Twórca </th>
+        <td mat-cell *matCellDef="let match"> {{match.ownerDisplayName}} </td>
+      </ng-container>
+
+      <ng-container matColumnDef="city">
+        <th mat-header-cell *matHeaderCellDef> Miasto </th>
+        <td mat-cell *matCellDef="let match"> {{match.city}} </td>
+      </ng-container>
+
+      <ng-container matColumnDef="date">
+        <th mat-header-cell *matHeaderCellDef> Data </th>
+        <td mat-cell *matCellDef="let match"> {{match.startTime | date:'yyyy-MM-dd'}} </td>
+      </ng-container>
+
+      <ng-container matColumnDef="startTime">
+        <th mat-header-cell *matHeaderCellDef> Start </th>
+        <td mat-cell *matCellDef="let match"> {{match.startTime | date:'hh-mm'}} </td>
+      </ng-container>
+
+      <ng-container matColumnDef="endTime">
+        <th mat-header-cell *matHeaderCellDef> Koniec </th>
+        <td mat-cell *matCellDef="let match"> {{match.endTime | date:'hh-mm'}} </td>
+      </ng-container>
+
+      <ng-container matColumnDef="addressLine">
+        <th mat-header-cell *matHeaderCellDef> Adres </th>
+        <td mat-cell *matCellDef="let match"> {{match.addressLine}} </td>
+      </ng-container>
+
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+    </table>
+
+    <ng-template #noData>
+        <div class="no-data">
+          <h4 class="color-info mt-2">Aktualnie nie jesteś zapisany na żadne spotkanie!</h4>
+          <button class="mx-2" color="primary"mat-raised-button color="primary">
+            <mat-icon>search</mat-icon>{{ 'Wszukaj spotkanie' }}
+          </button>
+        </div>
+    </ng-template>
 
   </div>
   <div>
