--- a/FootballNeighborhood.Frontend/src/app/sidebar/sidebar.component.html
+++ b/FootballNeighborhood.Frontend/src/app/sidebar/sidebar.component.html
@@ -1,26 +1,26 @@
 <mat-sidenav-container fullscreen>
-      <mat-sidenav class="sidenav-style base-background text-center" mode="side" #sidenav opened position="start">
+      <mat-sidenav class=" sidenav-style base-background text-center" mode="side" #sidenav opened position="start">
           <div>
             <img src="./assets/images/logo-icon.svg" class="mt-3 mb-2 logo" alt="Mecze piłkarskie logo">
           </div>
-          <mat-nav-list class="font-weight-bold">
-              <h1 class="color-green-light">Główne</h1>
+          <mat-nav-list class="font-set">
+              <h3 class="color-green-light mb-4">Główne</h3>
               <mat-list-item *ngFor="let link of generalLinks" [routerLink]="link.path"
                   [routerLinkActive]="['color-green-light']" #rla="routerLinkActive">
                   <div class="d-flex justify-content-center">
-                    <mat-icon [ngClass]="rla.isActive ? 'color-green-light': 'color-purple'">{{link.icon}}</mat-icon>
-                    <span [ngClass]="rla.isActive ? 'color-green-light': 'color-purple'"> &nbsp; {{link.label}}</span>
+                    <mat-icon [ngClass]="rla.isActive ? 'color-green-light ': 'color-purple'">{{link.icon}}</mat-icon>
+                    <span [ngClass]="rla.isActive ? 'color-green-light font-set': 'color-purple font-set'"> &nbsp; {{link.label}}</span>
                   </div>
               </mat-list-item>
           </mat-nav-list>
           <hr>
           <mat-nav-list>
-              <h1 class="color-green-light">Inne</h1>
+              <h3 class="color-green-light mb-4">Inne</h3>
               <mat-list-item *ngFor="let link of otherLinks" [routerLink]="link.path"
                   [routerLinkActive]="['color-green-light']" #rla="routerLinkActive">
                   <div class="d-flex justify-content-center">
                     <mat-icon [ngClass]="rla.isActive ? 'color-green-light': 'color-purple'"> {{link.icon}}</mat-icon>
-                    <span [ngClass]="rla.isActive ? 'color-green-light': 'color-purple'">
+                    <span [ngClass]="rla.isActive ? 'color-green-light font-set': 'color-purple font-set'">
                         &nbsp;{{link.label }}</span>
                   </div>
               </mat-list-item>
@@ -31,7 +31,7 @@
             </div>
           </div>
     </mat-sidenav>
-    <mat-sidenav-content class="base-background">
+    <mat-sidenav-content class="font-set base-background">
             <router-outlet></router-outlet>
     <mat-progress-bar *ngIf="dataLoading" class="progress-bar" mode="indeterminate"></mat-progress-bar>
     </mat-sidenav-content>
