--- a/FootballNeighborhood.Frontend/src/app/find-matches/find-matches.component.html
+++ b/FootballNeighborhood.Frontend/src/app/find-matches/find-matches.component.html
@@ -1,11 +1,20 @@
 <div class="w-100 d-flex flex-column">
   <div class="mt-5 p-5">
     <div class="d-flex justify-content-between">
-      <h3 class="color-green-light">Nadchodzące mecze na które jesteś zapisany</h3>
-      <button (click)="addNewMatch()" mat-raised-button color="accent">Dodaj spotkanie  <mat-icon >add</mat-icon></button>
+      <h3 class="color-green-light">Mecze na które można się zapisać</h3>
+      <button (click)="back()" class="action-button" mat-stroked-button color="primary"> Powrót <mat-icon>keyboard_arrow_left</mat-icon></button>
     </div>
     <hr>
-    <table mat-table [dataSource]="matches" class="mat-elevation-z8" *ngIf="matches && matches.length > 0; else noData;">
+    <div class="w-100 d-flex justify-content-center">
+      <mat-form-field >
+        <mat-label class="font-set">Miasto</mat-label>
+        <input (change)="cityChanged($event)" [(ngModel)]="city"  name="city" matInput required>
+      </mat-form-field>
+      <button class="mx-2" mat-fab color="primary">
+        <mat-icon>search</mat-icon>
+      </button>
+    </div>
+    <table mat-table [dataSource]="availableMatches" class="mat-elevation-z8" *ngIf="availableMatches && availableMatches.length > 0">
       <ng-container matColumnDef="name">
         <th mat-header-cell *matHeaderCellDef> Nazwa </th>
         <td mat-cell *matCellDef="let match"> {{match.name}} </td>
@@ -41,18 +50,27 @@
         <td mat-cell *matCellDef="let match"> {{match.addressLine}} </td>
       </ng-container>
 
+      <ng-container matColumnDef="actions">
+        <th mat-header-cell *matHeaderCellDef>Akcje</th>
+        <td mat-cell *matCellDef="let match">
+          <button (click)="assign(match.matchId)"
+          mat-raised-button color="primary"> Zapisz się <mat-icon>assignment_turned_in</mat-icon></button>
+        </td>
+      </ng-container>
+
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
       <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
     </table>
 
-    <ng-template #noData>
-        <div class="no-data">
-          <h4 class="color-purple mt-2">Aktualnie nie jesteś zapisany na żadne spotkanie!</h4>
-          <button (click)="findMatches()" class="mx-2" color="primary"mat-raised-button color="primary">
-            <mat-icon>search</mat-icon>{{ 'Wszukaj spotkanie' }}
-          </button>
-        </div>
-    </ng-template>
+    <div *ngIf="!city">
+      <div class="no-data">
+        <h4 class="color-purple mt-2">Wprowadz miasto</h4>
+      </div>
+    </div>
+
+    <div *ngIf="city && (!availableMatches || availableMatches.length ==0 )" class="no-data">
+      <h4 class="color-purple mt-2">Aktualnie nie ma spoktania dla miasta: {{city}}</h4>
+    </div>
 
   </div>
   <div>
