--- a/FootballNeighborhood.Frontend/src/app/find-matches/find-matches.component.html
+++ b/FootballNeighborhood.Frontend/src/app/find-matches/find-matches.component.html
@@ -54,7 +54,15 @@
         <th mat-header-cell *matHeaderCellDef>Akcje</th>
         <td mat-cell *matCellDef="let match">
           <button (click)="assign(match.matchId)"
-          mat-raised-button color="primary"> Zapisz się <mat-icon>assignment_turned_in</mat-icon></button>
+          mat-raised-button color="primary"> Zapisz się 
+            <mat-icon>assignment_turned_in</mat-icon>
+          </button>
+
+          <button (click)="details(match.matchId)"
+           mat-raised-button color="primary"> Szczegóły
+            <mat-icon>assignment_turned_in</mat-icon>
+          </button>
+
         </td>
       </ng-container>
 
@@ -68,8 +76,8 @@
       </div>
     </div>
 
-    <div *ngIf="city && (!availableMatches || availableMatches.length ==0 )" class="no-data">
-      <h4 class="color-purple mt-2">Aktualnie nie ma spoktania dla miasta: {{city}}</h4>
+    <div *ngIf="!loading && city && availableMatches?.length == 0" class="no-data">
+      <h4 class="color-purple mt-2">Aktualnie nie ma spoktania dla miasta: {{cityNotification}}</h4>
     </div>
 
   </div>
