--- a/FootballNeighborhood.Frontend/src/app/matches/match-details/match-details.component.html
+++ b/FootballNeighborhood.Frontend/src/app/matches/match-details/match-details.component.html
@@ -4,7 +4,7 @@
       <h3 class="color-green-light">{{title}}</h3>
       <div>
         <button (click)="back()" class="action-button" *ngIf="viewMode == viewModeValues.View" mat-stroked-button color="primary"> Powrót <mat-icon>keyboard_arrow_left</mat-icon></button>
-        <button (click)="edit()" class="action-button" *ngIf="viewMode == viewModeValues.View" mat-raised-button color="primary"> Edytuj <mat-icon>edit</mat-icon></button>
+        <button (click)="edit()" class="action-button" *ngIf="viewMode == viewModeValues.View" mat-raised-button color="primary"> Edytuj <mat-icon>edit</mat-icon></button> 
         <button (click)="saveChanges()" class="action-button" *ngIf="viewMode != viewModeValues.View" mat-raised-button color="accent"> Zapisz zmiany <mat-icon>save</mat-icon></button>
         <button (click)="assingToMatch()" class="action-button" *ngIf="viewMode != viewModeValues.Add && !alreadyAssigned" mat-raised-button color="primary"> Przypisz do spotkania <mat-icon>unarchive</mat-icon></button>
         <button (click)="discardChanges()" class="action-button" *ngIf="viewMode == viewModeValues.Edit" mat-raised-button color="primary"> Odrzuć zmiany <mat-icon>save</mat-icon></button>
@@ -92,7 +92,7 @@
       <div>
         <table mat-table [dataSource]="match.matchPlayers" 
           class="mat-elevation-z8" 
-          *ngIf="match.matchPlayers && match.matchPlayers.length > 0; else noData">
+          *ngIf="match?.matchPlayers && match.matchPlayers.length > 0; else noData">
           <ng-container matColumnDef="number">
             <th mat-header-cell *matHeaderCellDef>Numer</th>
             <td mat-cell *matCellDef="let match;let i = index"> {{i +1}} </td>
