--- a/FootballNeighborhood.Frontend/src/app/matches/match-details/match-details.component.html
+++ b/FootballNeighborhood.Frontend/src/app/matches/match-details/match-details.component.html
@@ -95,28 +95,36 @@
           *ngIf="match?.matchPlayers && match.matchPlayers.length > 0; else noData">
           <ng-container matColumnDef="number">
             <th mat-header-cell *matHeaderCellDef>Numer</th>
-            <td mat-cell *matCellDef="let match;let i = index"> {{i +1}} </td>
+            <td mat-cell *matCellDef="let player;let i = index"> {{i +1}} </td>
           </ng-container>
 
           <ng-container matColumnDef="userDisplayName">
             <th mat-header-cell *matHeaderCellDef>Gracz</th>
-            <td mat-cell *matCellDef="let match"> {{match.userDisplayName}} </td>
+            <td mat-cell *matCellDef="let player"> {{player.userDisplayName}} </td>
           </ng-container>
 
           <ng-container matColumnDef="playerType">
-            <th mat-header-cell *matHeaderCellDef>Rodzaj</th>
-            <td mat-cell *matCellDef="let match"> {{match.playerType | getPlayerTypeName}} </td>
+            <th mat-header-cell *matHeaderCellDef>Status Gracza</th>
+            <td mat-cell *matCellDef="let player"> {{player.playerType | getPlayerTypeName}} </td>
           </ng-container>
  
           <ng-container matColumnDef="actions">
-            <th mat-header-cell *matHeaderCellDef>Akcje</th>
-            <td mat-cell *matCellDef="let match">
+            <th mat-header-cell *matHeaderCellDef></th>
+            <td mat-cell *matCellDef="let player">
     
-              <!-- <button (click)="details(match.matchId)"
-               mat-raised-button color="primary"> Szczegóły
-                <mat-icon>assignment_turned_in</mat-icon>
-              </button> -->
-    
+              <button 
+                (click)="details(player.userId)"
+                mat-icon-button
+                color="primary"
+                class="mr-2">
+                <mat-icon>open_in_new</mat-icon>
+              </button>
+
+              <button (click)="removePlayer(player.userId, player.matchId)"
+                mat-icon-button color="warn">
+                <mat-icon>delete</mat-icon>
+              </button>
+  
             </td>
           </ng-container>
     
