--- a/FootballNeighborhood.Frontend/src/app/find-matches/find-matches.component.html
+++ b/FootballNeighborhood.Frontend/src/app/find-matches/find-matches.component.html
@@ -51,18 +51,32 @@
       </ng-container>
 
       <ng-container matColumnDef="actions">
-        <th mat-header-cell *matHeaderCellDef>Akcje</th>
+        <th mat-header-cell *matHeaderCellDef></th>
         <td mat-cell *matCellDef="let match">
-          <button (click)="assign(match.matchId)"
-          mat-raised-button color="primary"> Zapisz się 
-            <mat-icon>assignment_turned_in</mat-icon>
-          </button>
 
-          <button (click)="details(match.matchId)"
-           mat-raised-button color="primary"> Szczegóły
-            <mat-icon>assignment_turned_in</mat-icon>
-          </button>
+          <div class="d-flex mb-2 justify-content-end align-items-center">
+        
+            <button 
+              (click)="details(match.matchId)"
+              mat-icon-button
+              color="primary"
+              class="mr-2">
+              <mat-icon>open_in_new</mat-icon>
+            </button>
 
+            <button (click)="assign(match.matchId)" 
+              *ngIf="!checkUserIsAssinged(match.matchId); else userAssinged"
+              class="mr-2"
+              mat-raised-button color="primary">
+              Zapisz się
+              <mat-icon>assignment_turned_in</mat-icon>
+            </button>
+
+            <ng-template #userAssinged>
+              <span class="user-is-assinged-box color-green-light"> Jesteś już zapisany </span>
+            </ng-template>
+
+          </div>
         </td>
       </ng-container>
 
