--- a/FootballNeighborhood.Frontend/src/app/matches/match-details/match-details.component.scss
+++ b/FootballNeighborhood.Frontend/src/app/matches/match-details/match-details.component.scss
@@ -18,3 +18,20 @@
 .action-button{
   margin-right: 5px;
 }
+
+.box-info-success,
+.box-info-warning{
+  border-radius: 5px;
+  padding: 10px;
+  color: white;
+  min-width: 70px;
+  text-align: center;
+}
+
+.box-info-success{
+  background-color: #28A480;
+}
+
+.box-info-warning{
+  background-color: #F2A10D;
+}
